WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192996
REGRESSION (
r238522
): Erratic scrolling on Google flights search result page and vrbo.com
https://bugs.webkit.org/show_bug.cgi?id=192996
Summary
REGRESSION (r238522): Erratic scrolling on Google flights search result page ...
Daniel Bates
Reported
2018-12-21 14:37:15 PST
Steps to reproduce: 1. Visit
https://google.com
and search for "sfo to nyc". 2. Click on the calendar icon in one of the date fields. 3. Choose a data range. (You may need to play around and select different ranges). The page scrolls.
Attachments
Patch
(1.85 KB, patch)
2018-12-21 16:08 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch and layout test
(5.42 KB, patch)
2019-01-04 15:41 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2018-12-21 14:37:39 PST
<
rdar://problem/46573552
>
Daniel Bates
Comment 2
2018-12-21 16:08:32 PST
Created
attachment 357999
[details]
Patch So far I have not had success at making a test for this :( And reducing google.com or vrbo.com is not straightforward. If anyone has any insights/suggestions I would appreciate it. In the interest of getting a patch out sooner I chose to post the fix for review without a test.
Daniel Bates
Comment 3
2019-01-04 15:41:08 PST
Created
attachment 358387
[details]
Patch and layout test
Daniel Bates
Comment 4
2019-01-04 21:06:06 PST
Comment on
attachment 358387
[details]
Patch and layout test Clearing flags on attachment: 358387 Committed
r239652
: <
https://trac.webkit.org/changeset/239652
>
Daniel Bates
Comment 5
2019-01-04 21:06:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug